# talk-cast

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/talk_cast/: __init__.py  cli.py  config.py  exceptions.py  narrate.py  narration_source.py
src/talk_cast/assemble/: __init__.py  audio_mix.py  subtitles.py  timeline.py
src/talk_cast/capture/: __init__.py  frames.py  timing.py
src/talk_cast/tts/: __init__.py  batch.py  cache.py  elevenlabs.py  errors.py
tests/: conftest.py  test_assemble_timeline.py  test_cache_invalidation.py  test_capture_frames.py  test_capture_timing.py  test_cli.py  test_config_defaults.py  test_elevenlabs_live.py  test_full_pipeline_mocked.py  test_hard_subtitles.py  test_music_bed_ducking.py  test_narration_source.py  test_regression.py  test_subtitle_srt.py  test_tts_cache_hit.py  test_tts_cache_key.py  test_tts_elevenlabs.py
