[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "talk-cast"
dynamic = ["version"]
description = "Deck-spec to narrated MP4: TTS via ElevenLabs, frame capture via web-overlay, audio mix via audio-arrange, video assembly via video-arrange."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Trollfabriken AITrix AB", email = "dev@trollfabriken.se" },
]
keywords = ["deck", "presentation", "tts", "video", "elevenlabs", "narration", "mp4"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "deck-spec >= 0.1",
    "slide-render >= 0.1",
    "video-arrange >= 0.1",
    "web-overlay >= 0.1",
    "audio-arrange >= 0.1",
    "elevenlabs >= 1.5",
    "pydantic >= 2.5",
]

[project.optional-dependencies]
subtitles = ["webvtt-py >= 0.5"]
dev = [
    "pytest >= 7",
    "pytest-cov >= 4",
    "ruff >= 0.4",
    "build",
    "pillow",
    "pypdf",
]

[project.urls]
Homepage = "https://github.com/tomastimelock/talk-cast"
Repository = "https://github.com/tomastimelock/talk-cast"
Issues = "https://github.com/tomastimelock/talk-cast/issues"

[project.scripts]
talk-cast = "talk_cast.cli:main"

[tool.hatch.version]
path = "src/talk_cast/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/talk_cast"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
exclude = [
    "/tests",
    "/.github",
    "/specs",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "skip_without_ffmpeg: skips if ffmpeg is not on PATH",
]

[tool.coverage.run]
source = ["src/talk_cast"]
branch = true

[tool.coverage.report]
fail_under = 75
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
